[tool.poetry]
name = "sonauto-api-examples"
version = "0.1.0"
description = ""
authors = ["zaptrem <zaptrem@me.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
yt-dlp = "^2025.2.19"
pydub = "^0.25.1"
requests = "^2.32.3"
dotenv = "^0.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
